
numcosmo_sources = []

numcosmo_build_cfg_h = configure_file(
    input: 'build_cfg.h.in',
    output: 'build_cfg.h',
    install_dir: numcosmo_includedir,
    install_tag: 'devel',
    configuration: numcosmo_build_cfg,
)
numcosmo_sources += numcosmo_build_cfg_h

subdir('sundials')
subdir('libcuba')
subdir('levmar')
subdir('misc')
subdir('toeplitz')
subdir('class')
subdir('plc')

ncm_sources = files(
    'math/ncm_binsplit.c',
    'math/ncm_bootstrap.c',
    'math/ncm_c.c',
    'math/ncm_cfg.c',
    'math/ncm_csq1d.c',
    'math/ncm_data.c',
    'math/ncm_data_dist1d.c',
    'math/ncm_data_dist2d.c',
    'math/ncm_data_funnel.c',
    'math/ncm_data_gauss.c',
    'math/ncm_data_gauss_cov.c',
    'math/ncm_data_gauss_cov_mvnd.c',
    'math/ncm_data_gauss_diag.c',
    'math/ncm_data_gaussmix2d.c',
    'math/ncm_data_poisson.c',
    'math/ncm_data_rosenbrock.c',
    'math/ncm_dataset.c',
    'math/ncm_diff.c',
    'math/ncm_dtuple.c',
    'math/ncm_fftlog.c',
    'math/ncm_fftlog_gausswin2.c',
    'math/ncm_fftlog_sbessel_j.c',
    'math/ncm_fftlog_sbessel_jljm.c',
    'math/ncm_fftlog_tophatwin2.c',
    'math/ncm_fit.c',
    'math/ncm_fit_esmcmc.c',
    'math/ncm_fit_esmcmc_walker.c',
    'math/ncm_fit_esmcmc_walker_apes.c',
    'math/ncm_fit_esmcmc_walker_stretch.c',
    'math/ncm_fit_esmcmc_walker_walk.c',
    'math/ncm_fit_gsl_ls.c',
    'math/ncm_fit_gsl_mm.c',
    'math/ncm_fit_gsl_mms.c',
    'math/ncm_fit_levmar.c',
    'math/ncm_fit_mc.c',
    'math/ncm_fit_mcbs.c',
    'math/ncm_fit_mcmc.c',
    'math/ncm_fit_state.c',
    'math/ncm_func_eval.c',
    'math/ncm_function_cache.c',
    'math/ncm_integral1d.c',
    'math/ncm_integral1d_ptr.c',
    'math/ncm_integral_nd.c',
    'math/ncm_integrate.c',
    'math/ncm_iset.c',
    'math/ncm_lapack.c',
    'math/ncm_lh_ratio1d.c',
    'math/ncm_lh_ratio2d.c',
    'math/ncm_likelihood.c',
    'math/ncm_matrix.c',
    'math/ncm_memory_pool.c',
    'math/ncm_model.c',
    'math/ncm_model_builder.c',
    'math/ncm_model_ctrl.c',
    'math/ncm_model_funnel.c',
    'math/ncm_model_mvnd.c',
    'math/ncm_model_rosenbrock.c',
    'math/ncm_mpi_job.c',
    'math/ncm_mpi_job_feval.c',
    'math/ncm_mpi_job_fit.c',
    'math/ncm_mpi_job_mcmc.c',
    'math/ncm_mpi_job_test.c',
    'math/ncm_mpsf_0F1.c',
    'math/ncm_mpsf_sbessel.c',
    'math/ncm_mpsf_trig_int.c',
    'math/ncm_mset.c',
    'math/ncm_mset_catalog.c',
    'math/ncm_mset_func.c',
    'math/ncm_mset_func1.c',
    'math/ncm_mset_func_list.c',
    'math/ncm_mset_trans_kern.c',
    'math/ncm_mset_trans_kern_cat.c',
    'math/ncm_mset_trans_kern_flat.c',
    'math/ncm_mset_trans_kern_gauss.c',
    'math/ncm_nnls.c',
    'math/ncm_obj_array.c',
    'math/ncm_ode_spline.c',
    'math/ncm_powspec.c',
    'math/ncm_powspec_corr3d.c',
    'math/ncm_powspec_filter.c',
    'math/ncm_powspec_sphere_proj.c',
    'math/ncm_powspec_spline2d.c',
    'math/ncm_prior.c',
    'math/ncm_prior_flat.c',
    'math/ncm_prior_flat_func.c',
    'math/ncm_prior_flat_param.c',
    'math/ncm_prior_gauss.c',
    'math/ncm_prior_gauss_func.c',
    'math/ncm_prior_gauss_param.c',
    'math/ncm_quaternion.c',
    'math/ncm_reparam.c',
    'math/ncm_reparam_linear.c',
    'math/ncm_rng.c',
    'math/ncm_serialize.c',
    'math/ncm_sf_sbessel.c',
    'math/ncm_sf_spherical_harmonics.c',
    'math/ncm_sparam.c',
    'math/ncm_sphere_map.c',
    'math/ncm_sphere_nn.c',
    'math/ncm_spline.c',
    'math/ncm_spline2d.c',
    'math/ncm_spline2d_bicubic.c',
    'math/ncm_spline2d_gsl.c',
    'math/ncm_spline2d_spline.c',
    'math/ncm_spline_cubic.c',
    'math/ncm_spline_cubic_d2.c',
    'math/ncm_spline_cubic_notaknot.c',
    'math/ncm_spline_func.c',
    'math/ncm_spline_func_test.c',
    'math/ncm_spline_gsl.c',
    'math/ncm_spline_rbf.c',
    'math/ncm_stats_dist.c',
    'math/ncm_stats_dist1d.c',
    'math/ncm_stats_dist1d_epdf.c',
    'math/ncm_stats_dist1d_spline.c',
    'math/ncm_stats_dist2d.c',
    'math/ncm_stats_dist2d_spline.c',
    'math/ncm_stats_dist_kde.c',
    'math/ncm_stats_dist_kernel.c',
    'math/ncm_stats_dist_kernel_gauss.c',
    'math/ncm_stats_dist_kernel_st.c',
    'math/ncm_stats_dist_vkde.c',
    'math/ncm_stats_vec.c',
    'math/ncm_timer.c',
    'math/ncm_util.c',
    'math/ncm_vector.c',
    'math/ncm_vparam.c',
    'ncm_build_inline.c',
)

ncm_sources_nogi = files()

ncm_headers = files(
    'math/ncm_binsplit.h',
    'math/ncm_bootstrap.h',
    'math/ncm_c.h',
    'math/ncm_cfg.h',
    'math/ncm_csq1d.h',
    'math/ncm_data.h',
    'math/ncm_data_dist1d.h',
    'math/ncm_data_dist2d.h',
    'math/ncm_data_funnel.h',
    'math/ncm_data_gauss.h',
    'math/ncm_data_gauss_cov.h',
    'math/ncm_data_gauss_cov_mvnd.h',
    'math/ncm_data_gauss_diag.h',
    'math/ncm_data_gaussmix2d.h',
    'math/ncm_data_poisson.h',
    'math/ncm_data_rosenbrock.h',
    'math/ncm_dataset.h',
    'math/ncm_diff.h',
    'math/ncm_dtuple.h',
    'math/ncm_fftlog.h',
    'math/ncm_fftlog_gausswin2.h',
    'math/ncm_fftlog_sbessel_j.h',
    'math/ncm_fftlog_sbessel_jljm.h',
    'math/ncm_fftlog_tophatwin2.h',
    'math/ncm_fit.h',
    'math/ncm_fit_esmcmc.h',
    'math/ncm_fit_esmcmc_walker.h',
    'math/ncm_fit_esmcmc_walker_apes.h',
    'math/ncm_fit_esmcmc_walker_stretch.h',
    'math/ncm_fit_esmcmc_walker_walk.h',
    'math/ncm_fit_gsl_ls.h',
    'math/ncm_fit_gsl_mm.h',
    'math/ncm_fit_gsl_mms.h',
    'math/ncm_fit_levmar.h',
    'math/ncm_fit_mc.h',
    'math/ncm_fit_mcbs.h',
    'math/ncm_fit_mcmc.h',
    'math/ncm_fit_state.h',
    'math/ncm_func_eval.h',
    'math/ncm_function_cache.h',
    'math/ncm_integral1d.h',
    'math/ncm_integral1d_ptr.h',
    'math/ncm_integral_nd.h',
    'math/ncm_integrate.h',
    'math/ncm_iset.h',
    'math/ncm_lapack.h',
    'math/ncm_lh_ratio1d.h',
    'math/ncm_lh_ratio2d.h',
    'math/ncm_likelihood.h',
    'math/ncm_matrix.h',
    'math/ncm_memory_pool.h',
    'math/ncm_model.h',
    'math/ncm_model_builder.h',
    'math/ncm_model_ctrl.h',
    'math/ncm_model_funnel.h',
    'math/ncm_model_mvnd.h',
    'math/ncm_model_rosenbrock.h',
    'math/ncm_mpi_job.h',
    'math/ncm_mpi_job_feval.h',
    'math/ncm_mpi_job_fit.h',
    'math/ncm_mpi_job_mcmc.h',
    'math/ncm_mpi_job_test.h',
    'math/ncm_mpsf_0F1.h',
    'math/ncm_mpsf_sbessel.h',
    'math/ncm_mpsf_trig_int.h',
    'math/ncm_mset.h',
    'math/ncm_mset_catalog.h',
    'math/ncm_mset_func.h',
    'math/ncm_mset_func1.h',
    'math/ncm_mset_func_list.h',
    'math/ncm_mset_trans_kern.h',
    'math/ncm_mset_trans_kern_cat.h',
    'math/ncm_mset_trans_kern_flat.h',
    'math/ncm_mset_trans_kern_gauss.h',
    'math/ncm_nnls.h',
    'math/ncm_obj_array.h',
    'math/ncm_ode_spline.h',
    'math/ncm_powspec.h',
    'math/ncm_powspec_corr3d.h',
    'math/ncm_powspec_filter.h',
    'math/ncm_powspec_sphere_proj.h',
    'math/ncm_powspec_spline2d.h',
    'math/ncm_prior.h',
    'math/ncm_prior_flat.h',
    'math/ncm_prior_flat_func.h',
    'math/ncm_prior_flat_param.h',
    'math/ncm_prior_gauss.h',
    'math/ncm_prior_gauss_func.h',
    'math/ncm_prior_gauss_param.h',
    'math/ncm_quaternion.h',
    'math/ncm_reparam.h',
    'math/ncm_reparam_linear.h',
    'math/ncm_rng.h',
    'math/ncm_serialize.h',
    'math/ncm_sf_sbessel.h',
    'math/ncm_sf_spherical_harmonics.h',
    'math/ncm_sparam.h',
    'math/ncm_sphere_map.h',
    'math/ncm_sphere_nn.h',
    'math/ncm_spline.h',
    'math/ncm_spline2d.h',
    'math/ncm_spline2d_bicubic.h',
    'math/ncm_spline2d_gsl.h',
    'math/ncm_spline2d_spline.h',
    'math/ncm_spline_cubic.h',
    'math/ncm_spline_cubic_d2.h',
    'math/ncm_spline_cubic_notaknot.h',
    'math/ncm_spline_func.h',
    'math/ncm_spline_func_test.h',
    'math/ncm_spline_gsl.h',
    'math/ncm_spline_rbf.h',
    'math/ncm_stats_dist.h',
    'math/ncm_stats_dist1d.h',
    'math/ncm_stats_dist1d_epdf.h',
    'math/ncm_stats_dist1d_spline.h',
    'math/ncm_stats_dist2d.h',
    'math/ncm_stats_dist2d_spline.h',
    'math/ncm_stats_dist_kde.h',
    'math/ncm_stats_dist_kernel.h',
    'math/ncm_stats_dist_kernel_gauss.h',
    'math/ncm_stats_dist_kernel_st.h',
    'math/ncm_stats_dist_vkde.h',
    'math/ncm_stats_vec.h',
    'math/ncm_timer.h',
    'math/ncm_util.h',
    'math/ncm_vector.h',
    'math/ncm_vparam.h',
)

ncm_headers_nogi = files(
    'math/ncm_flapack.h',
    'math/ncm_gsl_blas_types.h',
)

ncm_headers_internal = files(
    'math/ncm_stats_dist_kde_private.h',
    'math/ncm_stats_dist_kernel_private.h',
    'math/ncm_stats_dist_private.h',
    'math/ncm_stats_dist_vkde_private.h',
    'perturbations/nc_hipert_private.h',
)

nc_headers = files(
    'data/nc_data_bao.h',
    'data/nc_data_bao_a.h',
    'data/nc_data_bao_dhr_dar.h',
    'data/nc_data_bao_dmr_hr.h',
    'data/nc_data_bao_dtr_dhr.h',
    'data/nc_data_bao_dv.h',
    'data/nc_data_bao_dvdv.h',
    'data/nc_data_bao_empirical_fit.h',
    'data/nc_data_bao_empirical_fit_2d.h',
    'data/nc_data_bao_rdv.h',
    'data/nc_data_cluster_ncount.h',
    'data/nc_data_cluster_ncounts_gauss.h',
    'data/nc_data_cluster_pseudo_counts.h',
    'data/nc_data_cluster_wl.h',
    'data/nc_data_cmb.h',
    'data/nc_data_cmb_dist_priors.h',
    'data/nc_data_cmb_shift_param.h',
    'data/nc_data_dist_mu.h',
    'data/nc_data_hubble.h',
    'data/nc_data_hubble_bao.h',
    'data/nc_data_planck_lkl.h',
    'data/nc_data_snia.h',
    'data/nc_data_snia_cov.h',
    'data/nc_data_xcor.h',
    'galaxy/nc_galaxy_wl_obs.h',
    'galaxy/nc_galaxy_sd_position.h',
    'galaxy/nc_galaxy_sd_position_flat.h',
    'galaxy/nc_galaxy_sd_obs_redshift.h',
    'galaxy/nc_galaxy_sd_obs_redshift_spec.h',
    'galaxy/nc_galaxy_sd_obs_redshift_gauss.h',
    'galaxy/nc_galaxy_sd_true_redshift.h',
    'galaxy/nc_galaxy_sd_true_redshift_lsst_srd.h',
    'galaxy/nc_galaxy_sd_shape.h',
    'galaxy/nc_galaxy_sd_shape_gauss.h',
    'lss/nc_cluster_abundance.h',
    'lss/nc_cluster_mass.h',
    'lss/nc_cluster_mass_ascaso.h',
    'lss/nc_cluster_mass_benson.h',
    'lss/nc_cluster_mass_benson_xray.h',
    'lss/nc_cluster_mass_lnnormal.h',
    'lss/nc_cluster_mass_nodist.h',
    'lss/nc_cluster_mass_plcl.h',
    'lss/nc_cluster_mass_vanderlinde.h',
    'lss/nc_cluster_photoz_gauss.h',
    'lss/nc_cluster_photoz_gauss_global.h',
    'lss/nc_cluster_pseudo_counts.h',
    'lss/nc_cluster_redshift.h',
    'lss/nc_cluster_redshift_nodist.h',
    'lss/nc_cor_cluster_cmb_lens_limber.h',
    'lss/nc_galaxy_acf.h',
    'lss/nc_galaxy_selfunc.h',
    'lss/nc_growth_func.h',
    'lss/nc_halo_bias.h',
    'lss/nc_halo_bias_ps.h',
    'lss/nc_halo_bias_st_ellip.h',
    'lss/nc_halo_bias_st_spher.h',
    'lss/nc_halo_bias_tinker.h',
    'lss/nc_halo_mass_summary.h',
    'lss/nc_halo_cm_param.h',
    'lss/nc_halo_cm_duffy08.h',
    'lss/nc_halo_cm_klypin11.h',
    'lss/nc_halo_cm_dutton14.h',
    'lss/nc_halo_position.h',
    'lss/nc_halo_density_profile.h',
    'lss/nc_halo_density_profile_dk14.h',
    'lss/nc_halo_density_profile_einasto.h',
    'lss/nc_halo_density_profile_hernquist.h',
    'lss/nc_halo_density_profile_nfw.h',
    'lss/nc_halo_mass_function.h',
    'lss/nc_multiplicity_func.h',
    'lss/nc_multiplicity_func_bocquet.h',
    'lss/nc_multiplicity_func_crocce.h',
    'lss/nc_multiplicity_func_despali.h',
    'lss/nc_multiplicity_func_jenkins.h',
    'lss/nc_multiplicity_func_ps.h',
    'lss/nc_multiplicity_func_st.h',
    'lss/nc_multiplicity_func_tinker.h',
    'lss/nc_multiplicity_func_tinker_mean_normalized.h',
    'lss/nc_multiplicity_func_warren.h',
    'lss/nc_multiplicity_func_watson.h',
    'lss/nc_reduced_shear_calib.h',
    'lss/nc_reduced_shear_calib_wtg.h',
    'lss/nc_reduced_shear_cluster_mass.h',
    'lss/nc_transfer_func.h',
    'lss/nc_transfer_func_bbks.h',
    'lss/nc_transfer_func_camb.h',
    'lss/nc_transfer_func_eh.h',
    'lss/nc_window.h',
    'lss/nc_window_gaussian.h',
    'lss/nc_window_tophat.h',
    'lss/nc_wl_surface_mass_density.h',
    'model/nc_hicosmo_Vexp.h',
    'model/nc_hicosmo_de.h',
    'model/nc_hicosmo_de_cpl.h',
    'model/nc_hicosmo_de_jbp.h',
    'model/nc_hicosmo_de_reparam_cmb.h',
    'model/nc_hicosmo_de_reparam_ok.h',
    'model/nc_hicosmo_de_wspline.h',
    'model/nc_hicosmo_de_xcdm.h',
    'model/nc_hicosmo_gcg.h',
    'model/nc_hicosmo_idem2.h',
    'model/nc_hicosmo_lcdm.h',
    'model/nc_hicosmo_qconst.h',
    'model/nc_hicosmo_qgrw.h',
    'model/nc_hicosmo_qgw.h',
    'model/nc_hicosmo_qlinear.h',
    'model/nc_hicosmo_qrbf.h',
    'model/nc_hicosmo_qspline.h',
    'model/nc_hiprim_atan.h',
    'model/nc_hiprim_bpl.h',
    'model/nc_hiprim_expc.h',
    'model/nc_hiprim_power_law.h',
    'model/nc_hiprim_sbpl.h',
    'model/nc_hiprim_two_fluids.h',
    'perturbations/nc_hipert.h',
    'perturbations/nc_hipert_adiab.h',
    'perturbations/nc_hipert_bg_var.h',
    'perturbations/nc_hipert_boltzmann.h',
    'perturbations/nc_hipert_boltzmann_cbe.h',
    'perturbations/nc_hipert_boltzmann_std.h',
    'perturbations/nc_hipert_comp.h',
    'perturbations/nc_hipert_comp_pb.h',
    'perturbations/nc_hipert_em.h',
    'perturbations/nc_hipert_first_order.h',
    'perturbations/nc_hipert_grav.h',
    'perturbations/nc_hipert_grav_einstein.h',
    'perturbations/nc_hipert_gw.h',
    'perturbations/nc_hipert_itwo_fluids.h',
    'perturbations/nc_hipert_two_fluids.h',
    'perturbations/nc_hipert_wkb.h',
    'xcor/nc_xcor.h',
    'xcor/nc_xcor_AB.h',
    'xcor/nc_xcor_limber_kernel.h',
    'xcor/nc_xcor_limber_kernel_cmb_isw.h',
    'xcor/nc_xcor_limber_kernel_CMB_lensing.h',
    'xcor/nc_xcor_limber_kernel_gal.h',
    'xcor/nc_xcor_limber_kernel_weak_lensing.h',
    'xcor/nc_xcor_limber_kernel_tSZ.h',
    'nc_cbe.h',
    'nc_cbe_precision.h',
    'nc_de_cont.h',
    'nc_distance.h',
    'nc_hicosmo.h',
    'nc_hicosmo_priors.h',
    'nc_hiprim.h',
    'nc_hiqg_1d.h',
    'nc_hireion.h',
    'nc_hireion_camb.h',
    'nc_hireion_camb_reparam_tau.h',
    'nc_planck_fi.h',
    'nc_planck_fi_cor_tt.h',
    'nc_planck_fi_cor_ttteee.h',
    'nc_powspec_ml.h',
    'nc_powspec_ml_cbe.h',
    'nc_powspec_ml_spline.h',
    'nc_powspec_ml_transfer.h',
    'nc_powspec_mnl.h',
    'nc_powspec_mnl_halofit.h',
    'nc_recomb.h',
    'nc_recomb_cbe.h',
    'nc_recomb_seager.h',
    'nc_scalefactor.h',
    'nc_snia_dist_cov.h',
)

nc_sources = files(
    'data/nc_data_bao.c',
    'data/nc_data_bao_a.c',
    'data/nc_data_bao_dhr_dar.c',
    'data/nc_data_bao_dmr_hr.c',
    'data/nc_data_bao_dtr_dhr.c',
    'data/nc_data_bao_dv.c',
    'data/nc_data_bao_dvdv.c',
    'data/nc_data_bao_empirical_fit.c',
    'data/nc_data_bao_empirical_fit_2d.c',
    'data/nc_data_bao_rdv.c',
    'data/nc_data_cluster_ncount.c',
    'data/nc_data_cluster_ncounts_gauss.c',
    'data/nc_data_cluster_pseudo_counts.c',
    'data/nc_data_cluster_wl.c',
    'data/nc_data_cmb.c',
    'data/nc_data_cmb_dist_priors.c',
    'data/nc_data_cmb_shift_param.c',
    'data/nc_data_dist_mu.c',
    'data/nc_data_hubble.c',
    'data/nc_data_hubble_bao.c',
    'data/nc_data_planck_lkl.c',
    'data/nc_data_snia.c',
    'data/nc_data_snia_cov.c',
    'data/nc_data_xcor.c',
    'galaxy/nc_galaxy_wl_obs.c',
    'galaxy/nc_galaxy_sd_position.c',
    'galaxy/nc_galaxy_sd_position_flat.c',
    'galaxy/nc_galaxy_sd_obs_redshift.c',
    'galaxy/nc_galaxy_sd_obs_redshift_spec.c',
    'galaxy/nc_galaxy_sd_obs_redshift_gauss.c',
    'galaxy/nc_galaxy_sd_true_redshift.c',
    'galaxy/nc_galaxy_sd_true_redshift_lsst_srd.c',
    'galaxy/nc_galaxy_sd_shape.c',
    'galaxy/nc_galaxy_sd_shape_gauss.c',
    'lss/nc_cluster_abundance.c',
    'lss/nc_cluster_mass.c',
    'lss/nc_cluster_mass_ascaso.c',
    'lss/nc_cluster_mass_benson.c',
    'lss/nc_cluster_mass_benson_xray.c',
    'lss/nc_cluster_mass_lnnormal.c',
    'lss/nc_cluster_mass_nodist.c',
    'lss/nc_cluster_mass_plcl.c',
    'lss/nc_cluster_mass_vanderlinde.c',
    'lss/nc_cluster_photoz_gauss.c',
    'lss/nc_cluster_photoz_gauss_global.c',
    'lss/nc_cluster_pseudo_counts.c',
    'lss/nc_cluster_redshift.c',
    'lss/nc_cluster_redshift_nodist.c',
    'lss/nc_cor_cluster_cmb_lens_limber.c',
    'lss/nc_galaxy_acf.c',
    'lss/nc_galaxy_selfunc.c',
    'lss/nc_growth_func.c',
    'lss/nc_halo_bias.c',
    'lss/nc_halo_bias_ps.c',
    'lss/nc_halo_bias_st_ellip.c',
    'lss/nc_halo_bias_st_spher.c',
    'lss/nc_halo_bias_tinker.c',
    'lss/nc_halo_mass_summary.c',
    'lss/nc_halo_cm_param.c',
    'lss/nc_halo_cm_duffy08.c',
    'lss/nc_halo_cm_klypin11.c',
    'lss/nc_halo_cm_dutton14.c',
    'lss/nc_halo_position.c',
    'lss/nc_halo_density_profile.c',
    'lss/nc_halo_density_profile_dk14.c',
    'lss/nc_halo_density_profile_einasto.c',
    'lss/nc_halo_density_profile_hernquist.c',
    'lss/nc_halo_density_profile_nfw.c',
    'lss/nc_halo_mass_function.c',
    'lss/nc_multiplicity_func.c',
    'lss/nc_multiplicity_func_bocquet.c',
    'lss/nc_multiplicity_func_crocce.c',
    'lss/nc_multiplicity_func_despali.c',
    'lss/nc_multiplicity_func_jenkins.c',
    'lss/nc_multiplicity_func_ps.c',
    'lss/nc_multiplicity_func_st.c',
    'lss/nc_multiplicity_func_tinker.c',
    'lss/nc_multiplicity_func_tinker_mean_normalized.c',
    'lss/nc_multiplicity_func_warren.c',
    'lss/nc_multiplicity_func_watson.c',
    'lss/nc_reduced_shear_calib.c',
    'lss/nc_reduced_shear_calib_wtg.c',
    'lss/nc_reduced_shear_cluster_mass.c',
    'lss/nc_transfer_func.c',
    'lss/nc_transfer_func_bbks.c',
    'lss/nc_transfer_func_camb.c',
    'lss/nc_transfer_func_eh.c',
    'lss/nc_window.c',
    'lss/nc_window_gaussian.c',
    'lss/nc_window_tophat.c',
    'lss/nc_wl_surface_mass_density.c',
    'model/nc_hicosmo_Vexp.c',
    'model/nc_hicosmo_de.c',
    'model/nc_hicosmo_de_cpl.c',
    'model/nc_hicosmo_de_jbp.c',
    'model/nc_hicosmo_de_reparam_cmb.c',
    'model/nc_hicosmo_de_reparam_ok.c',
    'model/nc_hicosmo_de_wspline.c',
    'model/nc_hicosmo_de_xcdm.c',
    'model/nc_hicosmo_gcg.c',
    'model/nc_hicosmo_idem2.c',
    'model/nc_hicosmo_lcdm.c',
    'model/nc_hicosmo_qconst.c',
    'model/nc_hicosmo_qgrw.c',
    'model/nc_hicosmo_qgw.c',
    'model/nc_hicosmo_qlinear.c',
    'model/nc_hicosmo_qrbf.c',
    'model/nc_hicosmo_qspline.c',
    'model/nc_hiprim_atan.c',
    'model/nc_hiprim_bpl.c',
    'model/nc_hiprim_expc.c',
    'model/nc_hiprim_power_law.c',
    'model/nc_hiprim_sbpl.c',
    'model/nc_hiprim_two_fluids.c',
    'perturbations/nc_hipert.c',
    'perturbations/nc_hipert_adiab.c',
    'perturbations/nc_hipert_bg_var.c',
    'perturbations/nc_hipert_boltzmann.c',
    'perturbations/nc_hipert_boltzmann_cbe.c',
    'perturbations/nc_hipert_boltzmann_std.c',
    'perturbations/nc_hipert_comp.c',
    'perturbations/nc_hipert_comp_pb.c',
    'perturbations/nc_hipert_em.c',
    'perturbations/nc_hipert_first_order.c',
    'perturbations/nc_hipert_grav.c',
    'perturbations/nc_hipert_grav_einstein.c',
    'perturbations/nc_hipert_gw.c',
    'perturbations/nc_hipert_itwo_fluids.c',
    'perturbations/nc_hipert_two_fluids.c',
    'perturbations/nc_hipert_wkb.c',
    'xcor/nc_xcor.c',
    'xcor/nc_xcor_AB.c',
    'xcor/nc_xcor_limber_kernel.c',
    'xcor/nc_xcor_limber_kernel_cmb_isw.c',
    'xcor/nc_xcor_limber_kernel_CMB_lensing.c',
    'xcor/nc_xcor_limber_kernel_gal.c',
    'xcor/nc_xcor_limber_kernel_weak_lensing.c',
    'xcor/nc_xcor_limber_kernel_tSZ.c',
    'nc_cbe.c',
    'nc_cbe_precision.c',
    'nc_de_cont.c',
    'nc_distance.c',
    'nc_hicosmo.c',
    'nc_hicosmo_priors.c',
    'nc_hiprim.c',
    'nc_hiqg_1d.c',
    'nc_hireion.c',
    'nc_hireion_camb.c',
    'nc_hireion_camb_reparam_tau.c',
    'nc_planck_fi.c',
    'nc_planck_fi_cor_tt.c',
    'nc_planck_fi_cor_ttteee.c',
    'nc_powspec_ml.c',
    'nc_powspec_ml_cbe.c',
    'nc_powspec_ml_spline.c',
    'nc_powspec_ml_transfer.c',
    'nc_powspec_mnl.c',
    'nc_powspec_mnl_halofit.c',
    'nc_recomb.c',
    'nc_recomb_cbe.c',
    'nc_recomb_seager.c',
    'nc_scalefactor.c',
    'nc_snia_dist_cov.c',
)

gnome = import('gnome')

ncm_enum_types = gnome.mkenums(
    'ncm_enum_types',
    c_template: 'ncm_enum_types.c.template',
    h_template: 'ncm_enum_types.h.template',
    sources: ncm_headers,
    install_header: true,
    install_dir: numcosmo_includedir,
)

nc_enum_types = gnome.mkenums(
    'nc_enum_types',
    c_template: 'nc_enum_types.c.template',
    h_template: 'nc_enum_types.h.template',
    sources: nc_headers,
    install_header: true,
    install_dir: numcosmo_includedir,
)

ncm_fit_nlopt_enum_types = []
if nlopt_dep.found()
    message('Generating ncm_fit_nlopt_enum_meta.h')

    process_nlopt_enum = find_program('process_nlopt_enum.py', required: true)
    glib_mkenums = find_program('glib-mkenums', required: true)

    nlopt_header_tmp = cc.preprocess(
        'ncm_fit_nlopt_enum_meta.c',
        output: 'ncm_fit_nlopt_enum_meta.i',
        dependencies: nlopt_dep,
    )

    nlopt_enum_meta = custom_target(
        'ncm_fit_nlopt_enum_meta.h',
        input: nlopt_header_tmp,
        output: 'ncm_fit_nlopt_enum_meta.h',
        command: [process_nlopt_enum, '@INPUT@', '@OUTPUT@'],
    )

    ncm_fit_nlopt_enum_h = custom_target(
        'ncm_fit_nlopt_enum.h',
        input: nlopt_enum_meta,
        output: 'ncm_fit_nlopt_enum.h',
        command: [
            glib_mkenums,
            '--template', meson.current_source_dir() / 'ncm_fit_nlopt_enum.h.template',
            '@INPUT@',
        ],
        capture: true,
        install: true,
        install_dir: numcosmo_includedir,
    )

    ncm_fit_nlopt_enum_c = custom_target(
        'ncm_fit_nlopt_enum.c',
        input: nlopt_enum_meta,
        output: 'ncm_fit_nlopt_enum.c',
        command: [
            glib_mkenums,
            '--template', meson.current_source_dir() / 'ncm_fit_nlopt_enum.c.template',
            '@INPUT@',
        ],
        capture: true,
    )

    ncm_fit_nlopt_enum_types += [ncm_fit_nlopt_enum_c, ncm_fit_nlopt_enum_h]
    ncm_sources += 'math/ncm_fit_nlopt.c'
    ncm_headers += 'math/ncm_fit_nlopt.h'
endif

install_headers(
    ncm_headers + nc_headers + [
        'numcosmo.h',
        'numcosmo-math.h',
    ],
    preserve_path: true,
    subdir: 'numcosmo',
)

sundials_inc = include_directories('sundials/include')
libcuba_inc = include_directories('libcuba')

libnumcosmo_dep_list = [
    mpi_c_dep,
    cfitsio_dep,
    libfyaml_dep,
    fftw3_dep,
    fftw3f_dep,
    gio_dep,
    glib_dep,
    gmp_dep,
    gobject_dep,
    mpfr_dep,
    nlopt_dep,
    omp_c,
    blas_dep,
    lapack_dep,
    gsl_dep,
    arb_dep,
    flint_dep,
]

numcosmo_c_args = ['-DG_LOG_DOMAIN="NUMCOSMO"', '-DHAVE_CONFIG_H']
libnumcosmo = library(
    'numcosmo',
    sources: [
        ncm_sources,
        ncm_headers,
        ncm_sources_nogi,
        ncm_headers_nogi,
        ncm_headers_internal,
        nc_sources,
        nc_headers,
        numcosmo_sources,
        ncm_enum_types,
        nc_enum_types,
        ncm_fit_nlopt_enum_types,
        'numcosmo.h',
        'numcosmo-math.h',
        'config_extra.h',
    ],
    version: library_version,
    soversion: soversion,
    darwin_versions: darwin_versions,
    install: true,
    # intl.lib is not compatible with SAFESEH
    link_args: [noseh_link_args],
    include_directories: [configinc, sundials_inc, libcuba_inc, plc_inc],
    # Planck likelihood code uses dlsym to load the Planck likelihood library
    # components. This requires linking with link_whole to ensure that the
    # symbols are available at runtime.
    link_whole: [libplc],
    link_with: [libsundials, libcuba, liblevmar, libmisc, libtoeplitz, libclass],
    dependencies: libnumcosmo_dep_list,
    c_args: numcosmo_c_args,
)

libnumcosmo_dep = declare_dependency(
    link_with: libnumcosmo,
    dependencies: libnumcosmo_dep_list,
    sources: [
        ncm_enum_types[1],
        nc_enum_types[1],
        ncm_fit_nlopt_enum_types[1],
    ],
)

# Generate pkg-config files
# Code using NumCosmo frequently depends directly on gsl, glib, gobject, and gio, so we
# include them in the Requires field.
# This happends mostly because of inlining, but also because of the many macros defined
# in the glib headers.
pkg.generate(
    libnumcosmo,
    version: numcosmo_version,
    install_dir: numcosmo_pkgconfigreldir,
    filebase: 'numcosmo',
    name: 'NumCosmo',
    description: 'NumCosmo is a free software C Cosmology library',
    libraries: [gsl_dep, glib_dep, gobject_dep, gio_dep],
)

if enable_gir

    ncm_introspection_sources = [
        'ncm_gir_scan.h',
        ncm_sources,
        ncm_headers,
        ncm_enum_types,
        ncm_fit_nlopt_enum_types,
        'numcosmo-math.h',
    ]

    # -U__OPTIMIZE__ is needed to avoid a bug in gobject-introspection
    # It has no effect on the generated code
    numcosmo_math_gir = gnome.generate_gir(
        libnumcosmo,
        namespace: 'NumCosmoMath',
        nsversion: '1.0',
        identifier_prefix: 'Ncm',
        symbol_prefix: 'ncm',
        header: 'numcosmo/numcosmo-math.h',
        export_packages: 'numcosmo',
        sources: ncm_introspection_sources,
        dependencies: libnumcosmo_dep,
        includes: 'GObject-2.0',
        install: true,
        extra_args: ['-DNUMCOSMO_GIR_SCAN'],
    )

    nc_introspection_sources = [
        'ncm_gir_scan.h',
        nc_sources,
        nc_headers,
        nc_enum_types,
        'numcosmo.h',
    ]

    # -U__OPTIMIZE__ is needed to avoid a bug in gobject-introspection
    # It has no effect on the generated code
    numcosmo_gir = gnome.generate_gir(
        libnumcosmo,
        namespace: 'NumCosmo',
        nsversion: '1.0',
        identifier_prefix: 'Nc',
        symbol_prefix: 'nc',
        header: 'numcosmo/numcosmo.h',
        export_packages: 'numcosmo',
        sources: nc_introspection_sources,
        dependencies: libnumcosmo_dep,
        includes: ['GObject-2.0', numcosmo_math_gir[0]],
        install: true,
        extra_args: ['-DNUMCOSMO_GIR_SCAN'],
    )
    if have_vala
        vapi_deps = [
            'glib-2.0',
            'gobject-2.0',
        ]

        libnumcosmo_math_vapi = gnome.generate_vapi(
            'numcosmo-math',
            sources: numcosmo_math_gir[0],
            packages: vapi_deps,
            install: true,
        )

        libnumcosmo_vapi = gnome.generate_vapi(
            'numcosmo',
            sources: numcosmo_gir[0],
            packages: vapi_deps + [libnumcosmo_math_vapi],
            install: true,
        )
    endif
endif
